# coffeeshop-rocket-api

./: .gitignore  Cargo.toml  README.md
migrations/2025-07-08-005437_create_customers/: up.sql
migrations/2025-07-08-005445_create_drinks/: down.sql  up.sql
migrations/2025-07-08-005449_create_employees/: down.sql  up.sql
migrations/2025-07-08-005453_create_extras/: down.sql  up.sql
migrations/2025-07-08-005457_create_orders/: up.sql
migrations/2025-07-08-010514_create_order_items/: down.sql  up.sql
migrations/2025-07-08-010519_create_order_item_extras/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/models/: customer.rs  drink.rs  drinkSize.rs  drink_size.rs  employee.rs  extra.rs  mod.rs  order.rs  orderStatus.rs  order_item_extras.rs  order_items.rs  order_status.rs
src/models/infra/: mod.rs  sqlite_types.rs
src/routes/: customers.rs  drinks.rs  mod.rs
