[package]
name = "coffeeshop-rocket-api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.11", features = ["sqlite", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
rust_decimal = { version = "1.37.2", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
diesel-derive-enum = "2"